Testing scripts on github pages

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <body>ajperrins.com</body>
-<script>(function(){document.write('test js');}())</script>
+<script src="app.js"></script>
 </html>
