Including /blog - generated from hexo-blog repo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <html>
 <head>
-	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <link rel="stylesheet" href="animate.css" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,400' rel='stylesheet' type='text/css'>
+    <style>
+        * {
+            font-weight: 100;
+        }
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            font-weight: 100;
+            background-color: #666;
+            color: whitesmoke;
+        }
+
+        .page-title {
+            text-align: center;
+            margin-top: 5rem;
+            font-size: 5rem;
+        }
+    </style>
 </head>
-<body>ajperrins.com</body>
+<body>
+    <h1 class="animated fadeInDown page-title">ajperrins.com</h1>
+    <p>Nothing here, but you can read my <a style="color:white" href="/blog">blog</a>
+</body>
 <script src="app.js"></script>
 </html>
