Added landing 'about me' info; resume (with link)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         body {
             font-family: 'Roboto', sans-serif;
             font-weight: 100;
-            background-color: #666;
+            background-color: #444;
             color: whitesmoke;
+            margin-left: 25%;
+            margin-right: 25%;
         }
 
         .page-title {
@@ -20,11 +22,62 @@
             margin-top: 5rem;
             font-size: 5rem;
         }
+        ul {
+            text-align: center;
+            color: lightblue;
+        }
+        ul li {
+            display:inline;
+            color: lightblue;
+            padding: 2rem;
+        }
+        a { color: lightblue;}
+        h2 { text-align: center;}
+        h3 { color: darkgray; margin-top: 2rem; }
+        /*p { margin-left: 0.75rem; }*/
     </style>
 </head>
 <body>
     <h1 class="animated fadeInDown page-title">ajperrins.com</h1>
-    <p>Nothing here, but you can read my <a style="color:white" href="/blog">blog</a>
+
+    <ul>
+        <li>
+            <a href="/blog">blog</a>
+        </li>
+        <li>
+            <a  href="ajp-resume.pdf">resume</a>
+        </li>
+    </ul>
+
+    <br/>
+    <br/>
+    <br/>
+    <p>
+        Welcome, I'm Andrew. Here's a little of who I am and what I do...
+    </p>
+    <br/>
+
+    <h3>Software</h3>
+    <p>
+        I craft software for a living and often build software for myself.
+        I care about utilty and quality.
+        I believe good people are a requisite for good software.
+        Comprehensibility is more important than correctness because software needs to change.
+        I am candid and curious, and I look for these traits in the people I work with.
+    </p>
+
+    <h3>Interests</h3>
+    <p>
+        Two things influenced me recently: I read <a href="http://www.amazon.com/The-Black-Swan-Improbable-Robustness/dp/081297381X">The Black Swan: The Impact of the highly Improbable</a>, and I applied to <a href="http://flashpoint.gatech.edu/">Flashpoint</a>. 
+    </p>
+    <p>
+        These influences have led me to several intriguing thinkers and concepts: Daniel Khaneman - prospect theory, Robert Cialdini - psychology of influence, Robert Keagan - change immunity, Mandelbrot - fractals). I'm especially interested in how these things relate to Startups and Software.
+    </p>
+
+    <h3>Hobbies</h3>
+    <p>
+        I love playing music and tennis.
+    </p>
 </body>
 <script src="app.js"></script>
 </html>
