--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
     <h3>Interests</h3>
     <p>
-        Two things influenced me recently: I read <a href="http://www.amazon.com/The-Black-Swan-Improbable-Robustness/dp/081297381X">The Black Swan: The Impact of the highly Improbable</a>, and I applied to <a href="http://flashpoint.gatech.edu/">Flashpoint</a>. 
+        Two things influenced me recently: I read <a href="http://www.amazon.com/The-Black-Swan-Improbable-Robustness/dp/081297381X">The Black Swan</a>, and I attended two <a href="http://flashpoint.gatech.edu/">Flashpoint</a> infosessions. 
     </p>
     <p>
-        These influences have led me to several intriguing thinkers and concepts: Daniel Khaneman - prospect theory, Robert Cialdini - psychology of influence, Robert Keagan - change immunity, Mandelbrot - fractals). I'm especially interested in how these things relate to Startups and Software.
+        These influences have led me to several intriguing thinkers and concepts such as Daniel Khaneman - prospect theory, Robert Cialdini - psychology of influence, and Robert Keagan - change immunity. I'm especially interested in how these things relate to Startups and Software.
     </p>
 
     <h3>Hobbies</h3>
