--- a/index.html
+++ b/index.html
@@ -38,46 +38,18 @@
     </style>
 </head>
 <body>
-    <h1 class="animated fadeInDown page-title">ajperrins.com</h1>
+    <h1 class="fadeInDown page-title">ajperrins.com</h1>
 
     <ul>
-        <li>
+        <!-- <li>
             <a href="/blog">blog</a>
         </li>
         <li>
             <a  href="ajp-resume.pdf">resume</a>
-        </li>
+        </li> -->
     </ul>
 
-    <br/>
-    <br/>
-    <br/>
-    <p>
-        Welcome, I'm Andrew. Here's a little of who I am and what I do...
-    </p>
-    <br/>
 
-    <h3>Software</h3>
-    <p>
-        I craft software for a living and often build software for myself.
-        I care about utilty and quality.
-        I believe good people are a requisite for good software.
-        Comprehensibility is more important than correctness because software needs to change.
-        I am candid and curious, and I look for these traits in the people I work with.
-    </p>
-
-    <h3>Interests</h3>
-    <p>
-        Two things influenced me recently: I read <a href="http://www.amazon.com/The-Black-Swan-Improbable-Robustness/dp/081297381X">The Black Swan</a>, and I attended two <a href="http://flashpoint.gatech.edu/">Flashpoint</a> infosessions. 
-    </p>
-    <p>
-        These influences have led me to several intriguing thinkers and concepts such as Daniel Khaneman - prospect theory, Robert Cialdini - psychology of influence, and Robert Keagan - change immunity. I'm especially interested in how these things relate to Startups and Software.
-    </p>
-
-    <h3>Hobbies</h3>
-    <p>
-        I love playing music and tennis.
-    </p>
 </body>
 <script src="app.js"></script>
 <script>
