--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body>
-    <h1 class="fadeInDown page-title">ajperrins.com</h1>
+    <h1 class="page-title">ajperrins.com</h1>
 
     <ul>
         <!-- <li>
